--- a/CEDAcademyAPI/DataAccess/DataAccess.csproj
+++ b/CEDAcademyAPI/DataAccess/DataAccess.csproj
@@ -63,14 +63,23 @@
   <ItemGroup>
     <Compile Include="IRepositories\IBusinessUnitRepository.cs" />
     <Compile Include="IRepositories\ICertificateRepository.cs" />
+    <Compile Include="IRepositories\IChapterRepository.cs" />
+    <Compile Include="IRepositories\ICourseRepository.cs" />
     <Compile Include="IRepositories\IDepartmentRepository.cs" />
     <Compile Include="IRepositories\IEntityBaseRepository.cs" />
     <Compile Include="IRepositories\IExamRepository.cs" />
     <Compile Include="IRepositories\IExamResultRepository.cs" />
+    <Compile Include="IRepositories\IFileProgressRepository.cs" />
+    <Compile Include="IRepositories\IFileRepository.cs" />
     <Compile Include="IRepositories\IOptionRepository.cs" />
+    <Compile Include="IRepositories\IParagraphProgress.cs" />
+    <Compile Include="IRepositories\IParagraphRepository.cs" />
     <Compile Include="IRepositories\IQuestionRepository.cs" />
     <Compile Include="IRepositories\IQuizRepository.cs" />
     <Compile Include="IRepositories\IQuizResultRepository.cs" />
+    <Compile Include="IRepositories\IRatingRepository.cs" />
+    <Compile Include="IRepositories\ISectionRepository.cs" />
+    <Compile Include="IRepositories\ISubscriptionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BusinessUnitRepository.cs" />
     <Compile Include="Repositories\CertificateRepository.cs" />
