--- a/CEDAcademyAPI/Business/Business.csproj
+++ b/CEDAcademyAPI/Business/Business.csproj
@@ -62,6 +62,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ChapterService.cs" />
+    <Compile Include="Services\CourseService.cs" />
+    <Compile Include="Services\FileProgressService.cs" />
+    <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\ParagraphProgressService.cs" />
+    <Compile Include="Services\ParagraphService.cs" />
+    <Compile Include="Services\RatingService.cs" />
+    <Compile Include="Services\SectionService.cs" />
+    <Compile Include="Services\SubscriptionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj">
