--- a/CEDAcademyAPI/Business/Business.csproj
+++ b/CEDAcademyAPI/Business/Business.csproj
@@ -62,12 +62,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AnswerService.cs" />
+    <Compile Include="Services\BusinessUnitService.cs" />
+    <Compile Include="Services\CertificateService.cs" />
     <Compile Include="Services\ChapterService.cs" />
     <Compile Include="Services\CourseService.cs" />
+    <Compile Include="Services\DepartmentService.cs" />
+    <Compile Include="Services\ExamResultService.cs" />
+    <Compile Include="Services\ExamService.cs" />
     <Compile Include="Services\FileProgressService.cs" />
     <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\OptionService.cs" />
     <Compile Include="Services\ParagraphProgressService.cs" />
     <Compile Include="Services\ParagraphService.cs" />
+    <Compile Include="Services\QuestionService.cs" />
+    <Compile Include="Services\QuizResultService.cs" />
+    <Compile Include="Services\QuizService.cs" />
     <Compile Include="Services\RatingService.cs" />
     <Compile Include="Services\SectionService.cs" />
     <Compile Include="Services\SubscriptionService.cs" />
