--- a/CEDAcademyAPI/CEDAcademyAPI/CEDAcademyAPI.csproj
+++ b/CEDAcademyAPI/CEDAcademyAPI/CEDAcademyAPI.csproj
@@ -285,6 +285,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Image\" />
+    <Folder Include="PDF\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
