changement Service Base

--- a/CEDAcademyAPI/Business/Business.csproj
+++ b/CEDAcademyAPI/Business/Business.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Services\QuizService.cs" />
     <Compile Include="Services\RatingService.cs" />
     <Compile Include="Services\SectionService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\SubscriptionService.cs" />
   </ItemGroup>
   <ItemGroup>
