--- a/CEDAcademyAPI/CEDAcademyAPI/packages.config
+++ b/CEDAcademyAPI/CEDAcademyAPI/packages.config
@@ -34,13 +34,13 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
+  <package id="Ninject.Extensions.ContextPreservation" version="3.3.1" targetFramework="net472" />
   <package id="Ninject.Extensions.Conventions" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Extensions.Factory" version="3.3.2" targetFramework="net472" />
-  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net472" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net472" />
   <package id="Ninject.Web.WebApi" version="3.3.1" targetFramework="net472" />
-  <package id="Ninject.Web.WebApi.WebHost" version="3.3.1" targetFramework="net472" />
+  <package id="Ninject.WebApi.DependencyResolver" version="0.1.4758.24814" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
